--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "nodemon": "^3.1.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
     "recoil": "^0.7.7",
     "tailwind-merge": "^3.0.2",
