--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "pretty": "npx prettier --write .",
+    "prepare": "husky"
   },
   "keywords": [],
   "author": "",
@@ -25,5 +27,11 @@
     "mongoose": "^8.12.1",
     "node-cron": "^3.0.3",
     "passport-google-oauth20": "^2.0.0"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
+    "husky": "^9.1.7",
+    "prettier": "^3.5.3"
   }
 }
