--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,5 @@
 VITE_DEV_BACKEND_URL=http://localhost:4000
-VITE_PROD_BACKEND_URL=https://assignment-qh3o.onrender.com
+REACT_APP_A_TO_Z_STRIVER_SHEET_LINK=https://backend.takeuforward.org/api/sheets/double/strivers_a2z_sheet
+REACT_APP_SDE_STRIVER_SHEET_LINK=https://backend.takeuforward.org/api/sheets/single/strivers_sde_sheet
+REACT_APP_STRIVER_79_SHEET_LINK=https://backend.takeuforward.org/api/sheets/single/strivers_79_sheet
+REACT_APP_LEETCODE_BLINKEN_SHEET_LINK=https://backend.takeuforward.org/api/sheets/single/blind_75
