--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,11 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start:prod": "npm run build && npm run preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
@@ -27,11 +29,13 @@
     "google-auth-library": "^9.15.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.483.0",
+    "motion": "^12.23.3",
     "nodemon": "^3.1.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
+    "react-syntax-highlighter": "^15.6.1",
     "recoil": "^0.7.7",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.14",
