--- a/frontend/.env
+++ b/frontend/.env
@@ -3,3 +3,4 @@ REACT_APP_A_TO_Z_STRIVER_SHEET_LINK=https://backend.takeuforward.org/api/sheets/
 REACT_APP_SDE_STRIVER_SHEET_LINK=https://backend.takeuforward.org/api/sheets/single/strivers_sde_sheet
 REACT_APP_STRIVER_79_SHEET_LINK=https://backend.takeuforward.org/api/sheets/single/strivers_79_sheet
 REACT_APP_LEETCODE_BLINKEN_SHEET_LINK=https://backend.takeuforward.org/api/sheets/single/blind_75
+GEMINI_API_KEY=AIzaSyCsxXpY2h0dsxVQCKgjJ-C3A_9542Hkbt0
